# docs/swagger.json
@@ -30,7 +30,7 @@
                 }
             },
             "post": {
-                "description": "Get List Channel",
+                "description": "Create Channel",
                 "consumes": [
                     "application/json"
                 ],
@@ -40,7 +40,7 @@
                 "tags": [
                     "channels"
                 ],
-                "summary": "List Channel",
+                "summary": "Create Channel",
                 "parameters": [
                     {
                         "description": "チャンネル名",
@@ -58,6 +58,38 @@
                         "schema": {
                             "$ref": "#/definitions/github_com_girakdev_girack-backend_controller_model.Channel"
                         }
+                    }
+                }
+            }
+        },
+        "/channels/{id}": {
+            "delete": {
+                "description": "Delete Channel",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "channels"
+                ],
+                "summary": "Delete Channel",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "チャンネルID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
